# tosi-design

./: .gitignore  0626_esquith.txt  HANDOVER_WSL.md  PROGRESS.md  README.md  plan.md  pyproject.toml  requirements.txt  要件定義書.html
.claude/: settings.local.json
arcgis/: build_nd_only.py  create_network_dataset.py  diagnose_batch.py  nmincity.DiagnoseProximity.pyt.xml  nmincity.DownloadOSMFacilities.pyt.xml  nmincity.pyt  nmincity.pyt.xml
src/nmincity/: __init__.py  __main__.py  cli.py  config.py
src/nmincity/backend/: __init__.py  arcpy_backend.py  base.py  osmnx_backend.py
src/nmincity/core/: __init__.py  allocation.py  chronotopia.py  experiential.py  proposals.py  reachability.py  score.py  sensitivity.py  walkability.py
src/nmincity/data/: __init__.py  gdb_loader.py  loader.py
src/nmincity/viz/: __init__.py  charts.py  dashboard.py  maps.py
tests/: test_allocation.py  test_arcpy_backend.py  test_charts.py  test_chronotopia.py  test_config.py  test_dashboard.py  test_experiential.py  test_gdb_loader.py  test_maps.py  test_proposals.py  test_reachability.py  test_score.py  test_sensitivity.py  test_walkability.py
